{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 129,
  "lineage": "1abf4944-1f64-3027-2f2e-b37ca10441a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_kong_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09d1757200d151c78",
            "domain": "vpc",
            "id": "eipalloc-0d7ce853c74e2fdd3",
            "instance": "i-0d967e0a03e0aba55",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04bd48c16b2e87b9f",
            "private_dns": "ip-10-0-1-74.ec2.internal",
            "private_ip": "10.0.1.74",
            "public_dns": "ec2-3-215-209-122.compute-1.amazonaws.com",
            "public_ip": "3.215.209.122",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.kong_vm_1",
            "aws_internet_gateway.igw_kong",
            "aws_security_group.sg_kong",
            "aws_subnet.subnet_kong_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_kong_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06892fd2454fcfdf8",
            "domain": "vpc",
            "id": "eipalloc-0045530d71072def4",
            "instance": "i-09d6710294ba5ba9b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09c3e482ce342ca72",
            "private_dns": "ip-10-0-2-131.ec2.internal",
            "private_ip": "10.0.2.131",
            "public_dns": "ec2-52-71-128-100.compute-1.amazonaws.com",
            "public_ip": "52.71.128.100",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.kong_vm_2",
            "aws_internet_gateway.igw_kong",
            "aws_security_group.sg_kong",
            "aws_subnet.subnet_kong_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kong_vm_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:311028179126:instance/i-0d967e0a03e0aba55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d967e0a03e0aba55",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aopazo-kong",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04bd48c16b2e87b9f",
            "private_dns": "ip-10-0-1-74.ec2.internal",
            "private_ip": "10.0.1.74",
            "public_dns": "ec2-35-153-200-240.compute-1.amazonaws.com",
            "public_ip": "35.153.200.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b247eec815bb575c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-044621fb4c691f7f8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a28731167174101c",
            "tags": {
              "Name": "kong_vm_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-044621fb4c691f7f8"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_kong",
            "aws_subnet.subnet_kong_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kong_vm_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:311028179126:instance/i-09d6710294ba5ba9b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d6710294ba5ba9b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aopazo-kong",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09c3e482ce342ca72",
            "private_dns": "ip-10-0-2-131.ec2.internal",
            "private_ip": "10.0.2.131",
            "public_dns": "ec2-3-88-43-129.compute-1.amazonaws.com",
            "public_ip": "3.88.43.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-003cc091418bb23f4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-044621fb4c691f7f8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f748b4bd9df432e5",
            "tags": {
              "Name": "kong_vm_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-044621fb4c691f7f8"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_kong",
            "aws_subnet.subnet_kong_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311028179126:internet-gateway/igw-0ed5efbbb64ed6273",
            "id": "igw-0ed5efbbb64ed6273",
            "owner_id": "311028179126",
            "tags": {
              "Name": "igw_kong"
            },
            "vpc_id": "vpc-0a2c2e40a80443b17"
          },
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external_lbaas_kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:311028179126:loadbalancer/app/externalLbaasKong/00475cf3c570faa1",
            "arn_suffix": "app/externalLbaasKong/00475cf3c570faa1",
            "dns_name": "externalLbaasKong-65877637.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:311028179126:loadbalancer/app/externalLbaasKong/00475cf3c570faa1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "externalLbaasKong",
            "security_groups": [
              "sg-044621fb4c691f7f8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a28731167174101c"
              },
              {
                "subnet_id": "subnet-0f748b4bd9df432e5"
              }
            ],
            "subnets": [
              "subnet-0a28731167174101c",
              "subnet-0f748b4bd9df432e5"
            ],
            "vpc_id": "vpc-0a2c2e40a80443b17",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg_kong",
            "aws_subnet.subnet_kong_1",
            "aws_subnet.subnet_kong_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:311028179126:listener/app/externalLbaasKong/00475cf3c570faa1/09f3a99ce06de841",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:311028179126:targetgroup/kongtargetgroup/70e5ff981ed2eb9c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:311028179126:listener/app/externalLbaasKong/00475cf3c570faa1/09f3a99ce06de841",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:311028179126:loadbalancer/app/externalLbaasKong/00475cf3c570faa1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external_lbaas_kong",
            "aws_lb_target_group.kong_tg",
            "aws_security_group.sg_kong",
            "aws_subnet.subnet_kong_1",
            "aws_subnet.subnet_kong_2",
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kong_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:311028179126:targetgroup/kongtargetgroup/70e5ff981ed2eb9c",
            "arn_suffix": "targetgroup/kongtargetgroup/70e5ff981ed2eb9c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 5,
                "matcher": "200",
                "path": "/status",
                "port": "8001",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:311028179126:targetgroup/kongtargetgroup/70e5ff981ed2eb9c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "kongtargetgroup",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a2c2e40a80443b17"
          },
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgr_attachment_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:311028179126:targetgroup/kongtargetgroup/70e5ff981ed2eb9c-20210423123940236700000002",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:311028179126:targetgroup/kongtargetgroup/70e5ff981ed2eb9c",
            "target_id": "i-0d967e0a03e0aba55"
          },
          "dependencies": [
            "aws_instance.kong_vm_1",
            "aws_lb_target_group.kong_tg",
            "aws_security_group.sg_kong",
            "aws_subnet.subnet_kong_1",
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgr_attachment_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:311028179126:targetgroup/kongtargetgroup/70e5ff981ed2eb9c-20210423123928015200000001",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:311028179126:targetgroup/kongtargetgroup/70e5ff981ed2eb9c",
            "target_id": "i-09d6710294ba5ba9b"
          },
          "dependencies": [
            "aws_instance.kong_vm_2",
            "aws_lb_target_group.kong_tg",
            "aws_security_group.sg_kong",
            "aws_subnet.subnet_kong_2",
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311028179126:route-table/rtb-007fa0cca97ca4a6b",
            "id": "rtb-007fa0cca97ca4a6b",
            "owner_id": "311028179126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed5efbbb64ed6273",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_kong"
            },
            "vpc_id": "vpc-0a2c2e40a80443b17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_kong",
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd7381b4f9db838f",
            "route_table_id": "rtb-007fa0cca97ca4a6b",
            "subnet_id": "subnet-0a28731167174101c"
          },
          "dependencies": [
            "aws_internet_gateway.igw_kong",
            "aws_route_table.route_table_kong",
            "aws_subnet.subnet_kong_1",
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0106293f00e507605",
            "route_table_id": "rtb-007fa0cca97ca4a6b",
            "subnet_id": "subnet-0f748b4bd9df432e5"
          },
          "dependencies": [
            "aws_internet_gateway.igw_kong",
            "aws_route_table.route_table_kong",
            "aws_subnet.subnet_kong_2",
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311028179126:security-group/sg-044621fb4c691f7f8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044621fb4c691f7f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "sg_kong_allow-all-sg",
            "name_prefix": "",
            "owner_id": "311028179126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_kong"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2c2e40a80443b17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_kong_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311028179126:subnet/subnet-0a28731167174101c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a28731167174101c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311028179126",
            "tags": {
              "Name": "subnet_kong_1"
            },
            "tags_all": {
              "Name": "subnet_kong_1"
            },
            "vpc_id": "vpc-0a2c2e40a80443b17"
          },
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_kong_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311028179126:subnet/subnet-0f748b4bd9df432e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f748b4bd9df432e5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311028179126",
            "tags": {
              "Name": "subnet_kong_2"
            },
            "tags_all": {
              "Name": "subnet_kong_2"
            },
            "vpc_id": "vpc-0a2c2e40a80443b17"
          },
          "dependencies": [
            "aws_vpc.kong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kong_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311028179126:vpc/vpc-0a2c2e40a80443b17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d1cb4e845bb031ed",
            "default_route_table_id": "rtb-0c2088bb89e14c5be",
            "default_security_group_id": "sg-0abf4523fbd1b3a5b",
            "dhcp_options_id": "dopt-c3861cb9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a2c2e40a80443b17",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c2088bb89e14c5be",
            "owner_id": "311028179126",
            "tags": {
              "Name": "kong_vpc"
            },
            "tags_all": {
              "Name": "kong_vpc"
            }
          }
        }
      ]
    }
  ]
}